text no longer cut off on hello page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@
 @theme {
   --color-cosplay: #3e9d79;
   --color-contact: #d3938c;
-  --color-hello: #66c5b7;
+  --color-hello: #81ccc1;
   --color-code: #6570d3;
 
   --color-mint: #9bd6c0;
